--- a/head.html
+++ b/head.html
@@ -10,3 +10,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-javascript.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/plugins/line-numbers/prism-line-numbers.min.js"></script>
 <script src="https://assets.adobedtm.com/b2f5fbf72a47/d20ed8517396/launch-e1dcd7f4c7a7-development.min.js" async></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
